expand click/toggle function between card terms and definitions from all cards at once to all cards individually.
co-authored-by: Donny Mays <dtmays2@gmail.com>

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
       <div class="col-4">
         <div class="card" style="width: 18rem;">
           <div class="card-body">
-            <h5 class="card-title card-term">JavaScript (JS)</h5>
-            <p class="card-text card-definition">JavaScript is a programming language used to make web pages interactive.</p>
+            <h5 class="card-title card-term-1">JavaScript (JS)</h5>
+            <p class="card-text card-definition-1">JavaScript is a programming language used to make web pages interactive.</p>
             <a href="#" class="card-link">Card link</a>
             <a href="#" class="card-link">Another link</a>
           </div>
@@ -23,8 +23,8 @@
       <div class="col-4">
         <div class="card" style="width: 18rem;">
           <div class="card-body">
-            <h5 class="card-title card-term">Operators</h5>
-            <p class="card-text card-definition">An operator is a special character (or characters) that indicates an action to be performed.</p>
+            <h5 class="card-title card-term-2">Operators</h5>
+            <p class="card-text card-definition-2">An operator is a special character (or characters) that indicates an action to be performed.</p>
             <a href="#" class="card-link">Card link</a>
             <a href="#" class="card-link">Another link</a>
           </div>
@@ -33,40 +33,8 @@
       <div class="col-4">
         <div class="card" style="width: 18rem;">
           <div class="card-body">
-            <h5 class="card-title card-term">Variables</h5>
-            <p class="card-text card-definition">-Variables can be thought of as containers used to store information. They allow for a way to label data with a descriptive name.</p>
-            <a href="#" class="card-link">Card link</a>
-            <a href="#" class="card-link">Another link</a>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-4">
-        <div class="card" style="width: 18rem;">
-          <div class="card-body">
-            <h5 class="card-title card-term">Variable naming conventions</h5>
-            <p class="card-text card-definition">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="#" class="card-link">Card link</a>
-            <a href="#" class="card-link">Another link</a>
-          </div>
-        </div>
-      </div>
-      <div class="col-4">
-        <div class="card" style="width: 18rem;">
-          <div class="card-body">
-            <h5 class="card-title card-term">Functions</h5>
-            <p class="card-text card-definition">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="#" class="card-link">Card link</a>
-            <a href="#" class="card-link">Another link</a>
-          </div>
-        </div>
-      </div>
-      <div class="col-4">
-        <div class="card" style="width: 18rem;">
-          <div class="card-body">
-            <h5 class="card-title card-term">Methods</h5>
-            <p class="card-text card-definition">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <h5 class="card-title card-term-3">Variables</h5>
+            <p class="card-text card-definition-3">Variables can be thought of as containers used to store information. They allow for a way to label data with a descriptive name.</p>
             <a href="#" class="card-link">Card link</a>
             <a href="#" class="card-link">Another link</a>
           </div>
@@ -77,8 +45,8 @@
       <div class="col-4">
         <div class="card" style="width: 18rem;">
           <div class="card-body">
-            <h5 class="card-title card-term">Arguments</h5>
-            <p class="card-text card-definition">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <h5 class="card-title card-term-4">Variable naming conventions</h5>
+            <p class="card-text card-definition-4">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
             <a href="#" class="card-link">Card link</a>
             <a href="#" class="card-link">Another link</a>
           </div>
@@ -87,8 +55,8 @@
       <div class="col-4">
         <div class="card" style="width: 18rem;">
           <div class="card-body">
-            <h5 class="card-title card-term">Parameters</h5>
-            <p class="card-text card-definition">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <h5 class="card-title card-term-5">Functions</h5>
+            <p class="card-text card-definition-5">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
             <a href="#" class="card-link">Card link</a>
             <a href="#" class="card-link">Another link</a>
           </div>
@@ -97,8 +65,40 @@
       <div class="col-4">
         <div class="card" style="width: 18rem;">
           <div class="card-body">
-            <h5 class="card-title card-term">Return</h5>
-            <p class="card-text card-definition">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <h5 class="card-title card-term-6">Methods</h5>
+            <p class="card-text card-definition-6">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <a href="#" class="card-link">Card link</a>
+            <a href="#" class="card-link">Another link</a>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-4">
+        <div class="card" style="width: 18rem;">
+          <div class="card-body">
+            <h5 class="card-title card-term-7">Arguments</h5>
+            <p class="card-text card-definition-7">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <a href="#" class="card-link">Card link</a>
+            <a href="#" class="card-link">Another link</a>
+          </div>
+        </div>
+      </div>
+      <div class="col-4">
+        <div class="card" style="width: 18rem;">
+          <div class="card-body">
+            <h5 class="card-title card-term-8">Parameters</h5>
+            <p class="card-text card-definition-8">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <a href="#" class="card-link">Card link</a>
+            <a href="#" class="card-link">Another link</a>
+          </div>
+        </div>
+      </div>
+      <div class="col-4">
+        <div class="card" style="width: 18rem;">
+          <div class="card-body">
+            <h5 class="card-title card-term-9">Return</h5>
+            <p class="card-text card-definition-9">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
             <a href="#" class="card-link">Card link</a>
             <a href="#" class="card-link">Another link</a>
           </div>
